docs: refresh docs and streamline CLAUDE guidance (#46)
* docs: refresh accuracy and add drift guardrails

* docs: streamline CLAUDE.md operational guidance

* style: use typing.List and Tuple for compatibility with check-jmh-regression.py